--- a/HISTORY
+++ b/HISTORY
@@ -253,3 +253,48 @@
 	    Sharpened the autoconf const check, AIX 3.2.3 managed to slip past
 	       it again
 	    Made sure that "make -n" with any make works as expected
+1994/10/31: v3.10
+	    Changes to procmail:
+	       - Minor corrections to the semantics of the 'a' and 'e' flags
+	       - Minor correction to the semantics of the -o option
+	       - Slight regular expression engine speedup
+	       - Regexp matching of environment variables is possible now
+	       - Due to popular demand: LOGABSTRACT=all logs *all* successful
+		 delivering-recipes executed
+	       - Enforce secure permissions on /etc/procmailrcs if used
+	       - Take sgid bit in the system mail spool dir into account
+		 even if it is world writable
+	       - The regexp engine can return matches now (new token "\/",
+		 new variable "MATCH")
+	       - New recipe flag 'r', raw mode, so procmail doesn't try
+		 to ensure the mail ends in an empty line
+	       - Success and failure of a filter recipe is well defined now
+	       - Procmail v3.06 prepended a bogus "." to explicit rcfile names
+		 searched relative to the home directory, fixed
+	       - Carved out two subroutines from main() to get it below the
+		 optimisation threshold
+	       - Eliminated duplicate error messages when procmailrcless
+		 delivery fails
+	       - Logging "Quota exceeded" messages when appropriate
+	       - Truncate notification suppressed when logfile not opened
+	       - Truncating didn't always work when delivering across NFS
+	       - The $_ special variable was wrong when wasn't set
+	    Changes to formail:
+	       - New option: -z (zap whitespace and empty fields)
+	       - Reading from stdin doesn't require the silly three EOFs
+		 anymore
+	       - -D with -r cache reply addresses now
+	       - Carved out one subroutine from main() to get it below the
+		 optimisation threshold
+	       - -R with -x didn't work reliably
+	       - -r with -i or -I sometimes had unexpected effects (in v3.06)
+	       - The nil-Return-Path-override was broken, fixed
+	    Updated the man pages, new subsection to procmailrc(5) summarising
+	       procmail regexp syntax
+	    Expanded on the sendmail.cf $#local example in the
+	       examples/advanced file again
+	    Revised detection of hard-link incapable filesystems during the
+	       installation
+	    Fixed bug in lockfile, the exitcode was not correct if
+	       you used -! (I hope this finally fixes this -! problem)
+	    Using execv() instead of execve()
