--- a/man/procmail.man
+++ b/man/procmail.man
@@ -1,6 +1,6 @@
 Please read the README file in this directory first.
 .ex
-.Id $Id: procmail.man,v 1.59 1994/08/23 14:47:21 berg Exp $
+.Id $Id: procmail.man,v 1.64 1994/10/20 18:14:22 berg Exp $
 .TH PROCMAIL 1 \*(Dt BuGless
 .na
 .SH NAME
@@ -28,8 +28,6 @@ procmail \- autonomous mail processor
 .I rcfile
 .if n .ti +0.5i
 .RI [ argument ]
-\&.\|.\|.
-.I mail_from rcpt_to
 \&.\|.\|.
 .br
 .B procmail
@@ -93,11 +91,11 @@ Force a timeout (see
 .TP
 .B USR1
 Equivalent to a
-.BR VERBOSE =on.
+.BR VERBOSE =off.
 .TP
 .B USR2
 Equivalent to a
-.BR VERBOSE =off.
+.BR VERBOSE =on.
 .SH OPTIONS
 .TP 0.5i
 .B \-@VERSIONOPT@
@@ -392,6 +390,10 @@ Missing recipient
 You specified the \-@DELIVEROPT@ option or called procmail under a different
 name, it expects one or more recipients as arguments.
 .TP
+No space left to finish writing "x"
+The filesystem containing "x" does not have enough free space to permit
+delivery of the message to the file.
+.TP
 Out of memory
 The system is out of swap space (and NORESRETRY has been exhausted).
 .TP
@@ -417,6 +419,10 @@ contained it was world writable (the rcfile was not used).
 .TP
 Terminating prematurely whilst waiting for .\|.\|.
 Procmail received a signal while it was waiting for .\|.\|.
+.TP
+Quota exceeded while writing "x"
+The filesize quota for the recipient on the filesystem containing "x"
+does not permit delivering the message to the file.
 .TP
 Timeout, terminating "x"
 Timeout has occurred on program or filter "x".
@@ -477,6 +483,10 @@ Creating a hardlink between directory folders.
 .TP
 Match on "x"
 Condition matched.
+.TP
+Matched "x"
+Assigned "x" to
+.BR @MATCHVAR@ .
 .TP
 No match on "x"
 Condition didn't match, recipe skipped.
@@ -674,8 +684,8 @@ exit 0
 .nf
 PATH=/bin:/usr/bin:@BINDIR@
 MAILDIR=$HOME/Mail      #you'd better make sure it exists
-DEFAULT=$MAILDIR/mbox
-LOGFILE=$MAILDIR/from
+DEFAULT=$MAILDIR/mbox   #completely optional
+LOGFILE=$MAILDIR/from   #recommended
 
 :0:
 * ^From.*berg
