--- a/man/procmailex.man
+++ b/man/procmailex.man
@@ -1,6 +1,6 @@
 Please read the README file in this directory first.
 .ex
-.Id $Id: procmailex.man,v 1.36 1994/08/30 16:15:48 berg Exp $
+.Id $Id: procmailex.man,v 1.44 1994/10/31 20:11:52 berg Exp $
 .TH PROCMAILEX 5 \*(Dt BuGless
 .na
 .SH NAME
@@ -64,6 +64,20 @@ An equivalent, but slightly slower solution that accomplishes the same:
 * ^From.*peter
 * ^Subject:.*compilers
 petcompil
+.Ex
+If you are fairly new to procmail and plan to experiment a little bit
+it often helps to have a
+.I safety net
+of some sort.  Inserting the following two recipes above all other recipes
+will make sure that of all arriving mail always the last 32 messages will
+be preserved.  In order for it to work as intended, you have to create
+a directory named `backup' in $MAILDIR prior to inserting these two recipes.
+.Sx 5
+:0 @CONTINUE@
+backup
+
+:0 @IGNORE_WRITERR@@CONTINUE@
+| cd backup && rm \-f dummy `ls \-t msg.* | sed \-e 1,32d`
 .Ex
 If your system doesn't generate or generates incorrect leading `@FROM@'
 lines on every mail, you can fix this by calling up procmail with
@@ -138,34 +152,26 @@ of the well known
 .BR vacation (1)
 program.  This recipe is based on the same principles as the last one (prevent
 `ringing' mail).  In addition to that however, it maintains a vacation database
-by extracting the name of the sender and appending it to the file
-$ALREADYSENT, if the name is
-.B not
-already in there.  If the name was new, it's name will be appended to the
-database and an autoreply will be sent.  To reliably extract the name of the
-sender, I let formail generate an autoreply header (thereby making it figure
-out the most appropriate sender address), and then telling it to extract the
-value of the `To:' field.
-.Sx 19
+by extracting the name of the sender and inserting it in the vacation.cache
+file if the name was new (the vacation.cache file is maintained by formail
+which will make sure that it always contains the most recent names, the size
+of the file is limited to a maximum of aproximately 8192 bytes).  If the name
+was new, an autoreply will be sent.
+.Sx 14
 SHELL=/bin/sh    # for other shells, this might need adjustment
 
-:0
+:0 @WAIT_EXIT_QUIET@@PASS_HEAD@@CONTINUE@: vacation.lock
 * !^FROM_DAEMON
 * !^X-Loop: your@own.mail.address
-{
-  FROM=`formail \-@FM_REPLY@@FM_EXTRACT@ To:`
-  ALREADYSENT=$HOME/vacation     # the vacation database
+| formail \-@FM_REPLY@@FM_DUPLICATE@ 8192 vacation.cache
 
-  :0 @CONTINUE@:                       # the lockfile is important
-  * !? fgrep \-e "$FROM" $ALREADYSENT
-  | echo "$FROM" >>$ALREADYSENT; \e
-    (formail \-@FM_REPLY@@FM_ADD_ALWAYS@"Precedence: junk" \e
+  :0 @ERROR_DO@@PASS_HEAD@@CONTINUE@         # if the name was not in the cache
+  | (formail \-@FM_REPLY@@FM_ADD_ALWAYS@"Precedence: junk" \e
        \-@FM_ADD_ALWAYS@"X-Loop: your@own.mail.address" ; \e
      echo "I received your mail,"; \e
      echo "but I won't be back until Monday."; \e
      echo "-- "; cat $HOME/.signature \e
     ) | $SENDMAIL \-oi \-t
-}
 .Ex
 Store all messages concerning TeX in separate, unique filenames, in a directory
 named texmail (this directory has to exist); there is no need to use lockfiles
@@ -288,15 +294,12 @@ file.
 .Ex
 The following recipe does the same, but is a bit more selective.  It only
 prints the postscript file if it comes from the print-server.  The first
-condition matches only if it is found in the header (i.e. no preceding empty
-line).  The second condition only matches at the start of the body (i.e.
-right after the
-.B first
-empty line).
+condition matches only if it is found in the header.  The second condition
+only matches at the start of the body.
 .Sx 4
-:0 @HEAD_GREP@@BODY_GREP@ @PASS_BODY@
-* ^^(.+$)*From[ :].*print-server
-* ^^(.+$)*^%!
+:0 @PASS_BODY@
+* ^From[ :].*print-server
+* B ?? ^^%!
 | lpr
 .Ex
 The same as above, but now by slightly different means:
@@ -308,6 +311,13 @@ The same as above, but now by slightly different means:
   * ^^%!
   | lpr
 }
+.Ex
+Likewise:
+.Sx 4
+:0 @HEAD_GREP@@BODY_GREP@ @PASS_BODY@
+* ^^(.+$)*From[ :].*print-server
+* ^^(.+$)*^%!
+| lpr
 .Ex
 Suppose you have two accounts, you use both accounts regularly, but they are
 in very distinct places (i.e. you can only read mail that arrived at either one
@@ -340,30 +350,32 @@ loops.
 Now follows an example for a very simple fileserver accessible by mail.
 For more demanding applications, I suggest you take a look at
 .B SmartList
-(available from the same place as the procmail distribution).  The most notable
-deficiency of the `fileserver' you see below is that it doesn't do any
-access checking.  It simply looks at the Subject: field in the header and
-extracts the names mentioned after the word `request'.  These names are
-put in the variable FILE, which is subsequently used to cat the files.
-The best way to enhance this fileserver would probably be to create a shell
-script to take care of the more complicated checks and operations.
-.Sx 17
+(available from the same place as the procmail distribution).
+As listed, this fileserver sends back at most one file per request, it
+ignores the body of incoming mails, the Subject: line has to look
+like "Subject: send file the_file_you_want" (the blanks are significant),
+it does not return files that have names starting with a dot, nor does
+it allow files to be retrieved that are outside the fileserver directory
+tree (if you decide to munge this example, make sure you do not inadvertently
+loosen this last restriction).
+.Sx 18
 :0
+* ^Subject: send file [0-9a-z]
 * !^X-Loop: yourname@your.main.mail.address
 * !^Subject:.*Re:
 * !^FROM_DAEMON
-* ^Subject:.*request
+* !^Subject: send file .*[/.]\e.
 {
-  MAILDIR=$HOME/fileserver   # chdir to the fileserver directory
+  MAILDIR=$HOME/fileserver # chdir to the fileserver directory
 
-  :0 @PASS_HEAD@             # extract the requested filename(s)
-  FILES=| sed \-n \-e 's/^Subject:.*request \e(.*\e)/\e1/p'
-
-  :0 @FILTER@                # reverse the mailheader
+  :0 fhw                   # reverse mailheader and extract name
+  * ^Subject: send file \e/[^ ]*
   | formail \-@FM_REPLY@@FM_ADD_ALWAYS@ "X-Loop: yourname@your.main.mail.address"
 
-  :0
-  | (cat; cat $FILES) | $SENDMAIL \-oi \-t
+  FILE="$MATCH"            # the requested filename
+
+  :0 ah
+  | cat \- ./$FILE 2>&1 | $SENDMAIL \-oi \-t
 }
 .Ex
 The following example preconverts all plain-text mail arriving in certain
