--- a/man/procmailrc.man
+++ b/man/procmailrc.man
@@ -1,6 +1,6 @@
 Please read the README file in this directory first.
 .ex
-.Id $Id: procmailrc.man,v 1.47 1994/08/23 14:47:25 berg Exp $
+.Id $Id: procmailrc.man,v 1.56 1994/10/31 18:02:12 berg Exp $
 .TH PROCMAILRC 5 \*(Dt BuGless
 .na
 .SH NAME
@@ -38,7 +38,7 @@ is found to match, processing of the rcfile will
 after the action line of this recipe has been executed.
 .PP
 Delivering recipes are those that cause header and/or body of the mail to
-be: written into a file, absorbed by a program or forwarded to a mailaddress.
+be written into a file, absorbed by a program or forwarded to a mailaddress.
 .PP
 Non-delivering recipes are those that cause the output of a program or
 filter to be captured back by procmail or those that start a nesting block.
@@ -46,9 +46,10 @@ filter to be captured back by procmail or those that start a nesting block.
 You can tell procmail to treat a
 .I delivering recipe
 as if it were a non-delivering recipe by specifying the `@CONTINUE@' flag on
-such a recipe.  This will make procmail
-.I continue
-processing the rcfile even if it just delivered successfully to this recipe.
+such a recipe.  This will make procmail generate a
+.I carbon copy
+of the mail by delivering it to this recipe, yet continue processing the
+rcfile.
 .PP
 By using any number of recipes you can presort your mail extremely
 straightforward into several mailfolders.  Bear in mind though that the mail
@@ -81,40 +82,30 @@ will have the entire mail at its stdin.
 .PP
 .SS Comments
 A word beginning with # and all the following characters up to a NEWLINE
-are ignored.
+are ignored.  This does not apply to condition lines, which cannot be
+commented.
 .SS Recipes
 .PP
 A line starting with ':' marks the beginning of a recipe.  It has the
 following format:
 .Sx 3
-: [\fInumber\fP] [\fIflags\fP] [ : [\fIlocallockfile\fP] ]
+:0 [\fIflags\fP] [ : [\fIlocallockfile\fP] ]
 <zero or more conditions (one per line)>
 <exactly one action line>
 .Ex
-The
-.I number
-is optional (defaults to 1) and specifies the number of conditions that
-follow the first line of the recipe.  Conditions are complete lines that are
-passed on to the internal egrep
+Conditions start with a leading `*', everything after that character
+is passed on to the internal egrep
 .BR literally ,
-except for leading and trailing whitespace.  If you start every condition
-line with an `*', you do not need to specify
-.IR number .
-Whitespace after the leading `*' are ignored.  The safest way would be
-to specify
-.I number
-to be zero in that case (to avoid problems when you have no conditions, but
-procmail expects one).
+except for leading and trailing whitespace.
 These regular expressions are
 .B completely
 compatible to the normal
 .BR egrep (1)
-regular expressions.
+extended regular expressions.  See also
+.BR "Extended regular expressions" .
 .PP
-Conditions are anded; if
-.I number
-is zero, then the condition is always true and no conditions are expected
-next.
+Conditions are anded; if there are no conditions the result will be true
+be default.
 .PP
 .I Flags
 can be any of the following:
@@ -133,24 +124,22 @@ to the default which is to ignore case).
 This recipe will depend on the last preceding recipe (on the current
 block-nesting level) without the `@ALSO_NEXT_RECIPE@' or `@ALSO_N_IF_SUCC@'
 flag.  This allows you to chain actions that depend on a common condition.
-The number of conditions that are expected to follow default to none.
 .TP
 .B @ALSO_N_IF_SUCC@
 Has the same meaning as the `@ALSO_NEXT_RECIPE@' flag, but will depend on the
 .I successful
 completion of the immediately preceding recipe as well.
-.Tp
+.TP
 .B @ELSE_DO@
 This recipe only executes if the immediately preceding recipe was not
 executed.  Execution of this recipe also disables any immediately
 following recipes with the '@ELSE_DO@' flag.  This allows you to specify
 `else if' actions.
-The number of conditions that are expected to follow default to none.
-.Tp
+.TP
 .B @ERROR_DO@
-This recipe only executes if the immediately preceding recipe failed.
+This recipe only executes if the immediately preceding recipe
+.IR failed .
 This allows you to specify `error' actions.
-The number of conditions that are expected to follow default to none.
 .TP
 .B @PASS_HEAD@
 Feed the header to the pipe (default).
@@ -162,10 +151,14 @@ Feed the body to the pipe (default).
 Consider the pipe as a filter.
 .TP
 .B @CONTINUE@
-Continue processing the rcfile even if this recipe matches (not needed
-when procmail has to read back the output (e.g. from a filter), nor on the
-start of a nesting block).  If you do specify it on a nesting block this will
-clone the running procmail process (lockfiles will not be inherited), whereas
+Generate a
+.B carbon copy
+of this mail.  This only makes sense on
+.I delivering
+recipes.  The only non-delivering recipe this flag has an effect on is
+on a nesting block, in order to generate a carbon copy this will
+.B clone
+the running procmail process (lockfiles will not be inherited), whereas
 the clone will proceed as usual and the parent will jump across the block.
 .TP
 .B @WAIT_EXIT@
@@ -180,10 +173,13 @@ Has the same meaning as the `@WAIT_EXIT@' flag, but will suppress any
 .B @IGNORE_WRITERR@
 Ignore any write errors on this recipe (i.e. usually due to an early closed
 pipe).
+.TP
+.B @RAW_NONL@
+Raw mode, do not try to ensure the mail ends with an empty line, write
+it out as is.
 .PP
 There are some special conditions you can use that are not straight regular
-expressions.  To select them, the first character of the condition must
-be a:
+expressions.  To select them, the condition must start with:
 .TP 0.5i
 .B !
 Invert the condition.
@@ -203,6 +199,11 @@ decimal) number of bytes.
 .TP
 .B >
 Analogous to '<'.
+.TP
+.B "variablename \fI??\fP"
+Match the remainder against the value of this environment variable (this cannot
+be a pseudo variable).  Special cases are `B', `H', `HB' and `BH', which
+merely override the default header/body search area defined for this recipe.
 .TP
 .B \e
 To quote any of the above at the start of the line.
@@ -245,7 +246,7 @@ the conditions leading up to the block, the flags `@PASS_HEAD@' and
 .PP
 Anything else will be taken as a mailbox name (either a filename or a
 directory, absolute or relative to the current directory (see MAILDIR)).
-If it is a filename (or nonexistent), the mail will be appended to it.
+If it is a (possibly yet inexistent) filename, the mail will be appended to it.
 .PP
 If it is a directory, the mail will be delivered to a newly created, guaranteed
 to be unique file named $MSGPREFIX* in the specified directory.  If the
@@ -308,7 +309,8 @@ Default
 .B mailbox
 file (if not told otherwise, procmail will dump mail in this mailbox).
 Procmail will automatically use $DEFAULT$LOCKEXT as lockfile prior to writing
-to this mailbox.
+to this mailbox.  You do not need to set this variable, since it already
+points to the standard system mailbox.
 .TP
 .B LOGFILE
 This file will also contain any error or diagnostic messages from procmail
@@ -328,7 +330,10 @@ or `off'.
 Just before procmail exits it logs an abstract of the delivered message in
 $LOGFILE showing the `@FROM@' and `Subject:' fields of the header, what folder
 it finally went to and how long (in bytes) the message was.  By setting this
-variable to `no', generation of this abstract is suppressed.
+variable to `no', generation of this abstract is suppressed.  If you set
+it to `all', procmail will log an abstract for every successful
+.I delivering recipe
+it processes.
 .TP
 .B LOG
 Anything assigned to this variable will be appended to $LOGFILE.
@@ -465,7 +470,7 @@ of temporary files, logging customised abstracts, etc.  See also
 .B EXITCODE
 and
 .BR LOGABSTRACT .
-.Tp
+.TP
 .B EXITCODE
 When procmail terminates and this variable has been set to a positive numeric
 value, procmail will use this as the exitcode.  If this variable is set but
@@ -481,7 +486,12 @@ program.
 This variable is assigned to by procmail whenever it is delivering
 to a folder or program.  It always contains the name of the last folder
 (or program) procmail delivered to.
-.Tp
+.TP
+.B @MATCHVAR@
+This variable is assigned to by procmail whenever it is told to extract
+text from a matching regular expression.  It will contain all text
+matching the regular expression past the `\fB\e/\fP' token.
+.TP
 .B SHIFT
 Assigning a positive value to this variable has the same effect as
 the `shift' command in
@@ -501,6 +511,61 @@ to `no'.  Alternatively the biff-service can be customised by setting it to
 either `service@SERV_ADDRsep@', `@SERV_ADDRsep@hostname', or
 `service@SERV_ADDRsep@hostname'.  When not specified it defaults
 to @COMSATservice@@SERV_ADDRsep@@COMSAThost@.@DROPPRIVS@
+.SS "Extended regular expressions"
+The following tokens are known to both the procmail internal egrep and the
+standard
+.BR egrep (1):
+.TP 1.0i
+.B ^
+Start of a line.
+.TP
+.B $
+End of a line.
+.TP
+.B .
+Any character except a newline.
+.TP
+.B a*
+Any sequence of zero or more a's.
+.TP
+.B a+
+Any sequence of one or more a's.
+.TP
+.B a?
+Either zero or one a.
+.TP
+.B [^-a-d]
+Any character which is
+.B not
+either a dash, a, b, c, d or newline.
+.TP
+.B de|abc
+Either the sequence `de' or `abc'.
+.TP
+.B (abc)*
+Zero or more times the sequence `abc'.
+.PP
+These were only samples, of course, any more complex combination is valid
+as well.
+.PP
+The following token meanings are special procmail extensions:
+.TP 1.0i
+\fB^\fP or \fB$\fP
+Match a newline (for multiline matches).
+.TP
+.B ^^
+Anchor the expression at the very start of the search area, or if encountered
+at the end of the expression, anchor it at the very end of the search area.
+.TP
+\fB\e<\fP or \fB\e>\fP
+Match the character before or after a word.  They are merely a shorthand
+for `[^a-zA-Z0-9_]', but can also match newlines.
+Since they match actual characters, they are only suitable to delimit
+words, not to delimit inter-word space.
+.TP
+.B \e/
+Splits the expression in two parts.  Everything matching the right part
+will be assigned to the @MATCHVAR@ environment variable.
 .SH EXAMPLES
 Look in the
 .BR procmailex (5)
@@ -537,20 +602,17 @@ or on the command line as arguments.
 .PP
 Environment variables set
 .B inside
-the action part of a recipe will
+the shell-interpreted-`|' action part of a recipe will
 .B not
 retain their value after the recipe has finished since they are set in a
 subshell of procmail.  To make sure the value of an environment variable is
 retained you have to put the assignment to the variable before the leading `|'
 of a recipe, so that it can capture stdout of the program.
 .PP
-If you specify only a `@PASS_HEAD@' or a `@PASS_BODY@' flag on a recipe,
-and the recipe matches, then, unless a `@FILTER@' or `@CONTINUE@' flag is
+If you specify only a `@PASS_HEAD@' or a `@PASS_BODY@' flag on a delivering
+recipe, and the recipe matches, then, unless the `@CONTINUE@' flag is
 present as well, the body respectively the header of the mail will be silently
 lost.
-.PP
-The `@CONTINUE@' flag defaults to on when capturing stdout of a recipe in an
-environment variable.
 .SH "SEE ALSO"
 .na
 .nh
@@ -584,8 +646,8 @@ When the
 or
 .B \-@MAILFILTOPT@
 options are used, "$@" will expand to respectively the specified argument
-or the sender and recipient list; but only when passed as in the
-argument list to a program.@UPPERCASE_USERNAMES@
+(list); but only when passed as in the argument list to a
+program.@UPPERCASE_USERNAMES@
 .PP
 Procmail does not support the expansion of `~'.
 .PP
@@ -609,20 +671,6 @@ does not work as expected.
 .PP
 When capturing stdout from a recipe into an environment variable, exactly
 one trailing newline will be stripped.
-.PP
-By using the `^' or `$' in other spots than at the start respectively
-end of a regular expression you can use the internal egrep to do multiline
-matches.
-.PP
-When the regular expression starts with `^^' it will anchor the match
-at the very start of the text.
-When the regular expression ends with `^^' it will anchor the match
-at the very end of the text.
-.PP
-The start and end of a word can be matched by `\e<' and `\e>'.  They
-are merely a shorthand for `[^a-zA-Z0-9_]', but can also match newlines.
-Since they match actual characters, they are only suitable to delimit
-words, not to delimit inter-word space.
 .SH MISCELLANEOUS
 If the regular expression contains `\fB@TOkey@\fP' it will be substituted by
 .na
