--- a/HISTORY
+++ b/HISTORY
@@ -405,15 +405,15 @@
 	    Changes to procmail:
 	       - Use BOGUS.$LOGNAME.inode for bogus files to ease recovery
 	       - Define RESTRICT_EXEC to restrict execution of programs
-	       - Perform continuous checks on heap overflow, everywhere.
+	       - Perform continuous checks on heap overflow, everywhere
 		 If overflow is occurs then new variable PROCMAIL_OVERFLOW
 		 is set
 	       - Catch overly long rcfile names
-	       - new variable PROCMAIL_VERSION
+	       - New variable PROCMAIL_VERSION
 	       - LOGABSTRACT=all no longer logs filtering or variable capture
 		 actions
 	       - Don't strip leading \n in a $MATCH
-	       - Work around a compiler bug in Sun C compiler 4.2 (fdefault
+	       - Worked around a compiler bug in Sun C compiler 4.2 (fdefault
 		 cached past function calls)
 	       - Tempfile names would grow on retry
 	       - Open or reopen rcfiles as the user to prevent peeking when
@@ -447,10 +447,67 @@
 	       - weights<1 didn't work if floats changed accuracy when stored
 	    Worked around a bug in the Dunix 4.0e compiler (pointer addition
 	       not commutative)
-1999/04/05: v3.13.1 (fixes backported from 3.14-beta)
+1999/04/02: v3.14
 	    Changes to procmail:
-	       - Eliminated the conflict with the C9x restrict keyword
 	       - Some zero-length extractions using \/ could core dump
 	       - Missed a couple possible overflows
+	       - Eliminated the conflict with the C9x `restrict' keyword
+	       - Support delivery to maildir mailboxes
+	       - Support all styles of mailbox for the mail spool
+	       - Don't use a locallockfile on $DEFAULT if it's a directory
+	       - Set LINEBUF in the environment on startup
+	       - Avoid renaming over old messages in directory folders
+	       - New variable SWITCHRC performs `tail call'
+	       - Refuse to open anything but regular files with INCLUDERC
+		 and SWITCHRC
+	       - Indicate whether GROUP_PER_USER was defined in the -v output
+	       - Stopped depending on parens to stop function macros (they
+		 don't under SunOS 4.x cc)
+	       - Small heap compilation would fail on nomemerr() in pipes.c
+	       - Worked around Tru64 UNIX V4.0E and V4.0F compilers
+		 (strcpy() builtin doesn't always return pointer type)
+	       - Warn about using 'c' flag with 'f' flag or on variable
+		 capture recipes
+	       - Warn about using 'h', 'b', 'i', or 'r' flags on nested
+		 block recipes.
+	       - Test for allowing rcfiles in sticky directories iff chown
+		 is restricted was reversed
+	       - LASTFOLDER wasn't correctly set when delivering to multiple
+		 folders
+	       - -f- couldn't find the timestamp if the address contained a
+		 space
+	       - SENDMAIL and SENDMAILFLAGS are now split in forwarding actions
+	       - Variable capture actions now see the variable's current value
+		 and restore it if the action fails.  Previously unset
+		 variables will remain unset.
+	       - fsync() mailboxes before closing them
+	       - Actually suppress the 'E' and 'a' flags when combined with
+		 the 'e' flag instead of just saying so
+	       - Avoid some calls to alarm()
+	       - Overflows at certain times would confuse procmail
+	       - dyna_long code now meets strict ANSI restrictions
+	       - 'W' flag changes "Program failure" to "Non-zero exitcode"
+	       - Nested blocks must open and close within the same rcfile
+	       - Root owned lockfiles aren't bogus
+	       - A lone trailing '$' wasn't terminated properly when expanded
+	    Changes to formail:
+	       - Replies without the -t flag go to the envelope sender
+	       - Replies without "-a Resent-" and -t flag ignore the
+		 Resent-* headers
+	       - Prevent corrupt idcaches by suppressing the -n option when
+		 splitting with the -D option
+	       - Accept and strip whitespace between the fieldname and colon
+	       - Renaming from a wildcard to nothing now works
 	    Changes to mailstat:
 	       - Work around the detab done on checkin to CVS
+	       - Recognize maildir mailboxes
+	       - Don't use a tempfile
+	    Changes to autoconf:
+	       - Don't assume realloc(0,size) works (doesn't under SunOS 4)
+	    Stopped using `implicit int' (for C9x)
+	    Cache gethostname() and uname() output
+	    Changed the form of tempfile names to make them `more' unique
+	     and deal with filename length limits more gracefully
+	    Updated the FAQ and the list of mirrors in the README
+	    Documented the exact behavior of lockfile's -! flag
+	    Documented the suggested usage of -r vs -rt
