--- a/man/formail.man
+++ b/man/formail.man
@@ -1,20 +1,23 @@
 Please read the README file in this directory first.
 .ex
-.Id $Id: formail.man,v 1.39 1999/10/24 06:30:36 guenther Exp $
+.Id $Id: formail.man,v 1.39.2.4 2001/07/15 09:49:16 guenther Exp $
 .TH FORMAIL 1 \*(Dt BuGless
-.na
 .SH NAME
 formail \- mail (re)formatter
 .SH SYNOPSIS
+.na
 .B formail
 .RI [ "\fB\@FM_SKIP@\fPskip" ]
 .RI [ "\fB\@FM_TOTAL@\fPtotal" ]
-.RB [ \-@FM_VERSION@@FM_BOGUS@@FM_CONCATENATE@@FM_ZAPWHITE@@FM_FORCE@@FM_REPLY@@FM_KEEPB@@FM_TRUST@@FM_EVERY@@FM_DIGEST@@FM_QUIET@@FM_BABYL@@FM_BERKELEY@ ]
+.RB [ \-@FM_BOGUS@@FM_CONCATENATE@@FM_ZAPWHITE@@FM_FORCE@@FM_REPLY@@FM_KEEPB@@FM_TRUST@@FM_EVERY@@FM_DIGEST@@FM_QUIET@@FM_BABYL@@FM_BERKELEY@ ]
 .RB [ \-@FM_QPREFIX@
 .IR prefix ]
 .if n .ti +0.5i
 .RB [ \-@FM_DUPLICATE@
 .IR "maxlen idcache" ]
+.if n .ti +0.5i
+.RB [ \-@FM_LOGSUMMARY@
+.IR folder ]
 .if n .ti +0.5i
 .RB [ \-@FM_EXTRACT@
 .IR headerfield ]
@@ -45,10 +48,14 @@ formail \- mail (re)formatter
 ]]
 .RB [ \-@FM_MINFIELDS@
 .IR minfields ]
-.RB [ \-@FM_SPLIT@
+.if n .ti +0.5i
+.RB  [ \-@FM_SPLIT@
 .RI [ command
 .RI [ arg
 \&.\|.\|.\|]]]
+.br
+.B formail
+.B \-@FM_VERSION@
 .ad
 .SH DESCRIPTION
 .B formail
@@ -71,7 +78,7 @@ bogus `@FROM@' lines with a `@ESCAP@'.
 Formail will print its version number and exit.
 .TP
 .B \-@FM_BOGUS@
-Don't escape any bogus mailbox headers (i.e. lines starting with `@FROM@').
+Don't escape any bogus mailbox headers (i.e., lines starting with `@FROM@').
 .TP
 .I "\fB\-@FM_QPREFIX@\fP prefix"
 Define a different quotation prefix.  If unspecified it defaults to `@ESCAP@'.
@@ -92,7 +99,7 @@ Zap leading and trailing whitespace on fields extracted with
 .BR \-@FM_EXTRACT@ .
 .TP
 .B \-@FM_FORCE@
-Force formail to simply pass along any non-mailbox format (i.e. don't
+Force formail to simply pass along any non-mailbox format (i.e., don't
 generate a `@FROM@' line as the first line).
 .TP
 .B \-@FM_REPLY@
@@ -126,7 +133,7 @@ a program one by one (a new program is started for every part).
 has to be the last option specified, the first argument following it is
 expected to be the name of a program, any other arguments will be
 passed along to it.  If you omit the program, then formail will simply
-concatenate the splitted mails on stdout again.  See
+concatenate the split mails on stdout again.  See
 .BR @FILENO@ .
 .TP
 .I "\fB\-@FM_NOWAIT@\fP [maxprocs]"
@@ -138,14 +145,20 @@ running processes.
 .TP
 .B \-@FM_EVERY@
 Do not require empty lines to be preceding the header of a new message
-(i.e.  the messages could start on every line).
+(i.e.,  the messages could start on every line).
 .TP
 .B \-@FM_DIGEST@
 Tell formail that the messages it is supposed to split need not be in
-strict mailbox format (i.e. allows you to split digests/articles or
+strict mailbox format (i.e., allows you to split digests/articles or
 non-standard mailbox formats).  This disables recognition of the
 .B Content-Length:
 field.
+.TP
+.B \-@FM_LOGSUMMARY@ folder
+Generate a log summary in the same style as procmail.  This includes
+the entire "From " line, the Subject: header field, the folder, and
+the size of the message in bytes.  The mailstat command can be used
+to summarize logs in this format.
 .TP
 .B \-@FM_BABYL@
 Makes formail assume that it is splitting up a BABYL rmail file.
@@ -182,12 +195,15 @@ at the Message-ID.
 .I "\fB\-@FM_EXTRACT@\fP headerfield"
 Extract the contents of this
 .I headerfield
-from the header, display it as a single line.
+from the header.  Line continuations will be left intact; if you
+want the value on a single line then you'll also need the
+.B \-@FM_CONCATENATE@
+option.
 .TP
 .I "\fB\-@FM_EXTRC_KEEP@\fP headerfield"
 Same as
 .BR \-@FM_EXTRACT@ ,
-but also preserves the field name.
+but also preserves/includes the field name.
 .TP
 .I "\fB\-@FM_ADD_IFNOT@\fP headerfield"
 Append a custom
@@ -254,12 +270,25 @@ of the original message.  If the sender is expecting a reply or the
 reply is being generated in response to the contents of the original
 message then the \-@FM_TRUST@ option should be used.
 .PP
-RFC822, the original standard governing the format of Internet mail
+.BR RFC822 ,
+the original standard governing the format of Internet mail
 messages, did not specify whether Resent header fields (those that
 begin with `Resent\-', such as `Resent\-From:') should be considered
 when generating a reply.  Since then, the recommended usage of the
-Resent headers has changed to consider them as purely informational and
-not for use when normally generating a reply.  While formail now
+Resent headers has evolved to consider them as purely informational and
+not for use when generating a reply.  This has been codified in
+.BR RFC2822 ,
+the new Internet Message Format standard, which states in part:
+.IP
+Resent fields are used to identify a message as having been
+reintroduced into the transport system by a user.  The purpose of
+using resent fields is to have the message appear to the final
+recipient as if it were sent directly by the original sender, with
+all of the original fields remaining the same.  .\|.\|.  They
+MUST NOT be used in the normal processing of replies or other such
+automatic actions on messages.
+.PP
+While formail now
 ignores Resent headers when generating header replies, versions of
 formail prior to 3.14 gave such headers a high precedence.  If the old
 behavior is needed for established applications it can be specified by
@@ -337,6 +366,7 @@ sed \-e '1,/^$/ d'
 .BR sed (1),
 .BR sh (1),
 .BR RFC822 ,
+.BR RFC2822 ,
 .B RFC1123
 .hy
 .ad
@@ -371,16 +401,31 @@ Too many open files on this machine.
 Invalid field-name: "x"
 The specified field-name "x" contains control characters, or cannot be a
 partial field-name for this option.
-.TP
-No-wait option ignored to prevent corrupt idcache
-The -@FM_NOWAIT@ and -@FM_DUPLICATE@ options cannot be safely used together,
-so the former was ignored.
 .SH WARNINGS
 You can save yourself and others a lot of grief if you try to avoid using
 this autoreply feature on mails coming through mailinglists.  Depending
 on the format of the incoming mail (which in turn depends on both the
 original sender's mail agent and the mailinglist setup) formail could
 decide to generate an autoreply header that replies to the list.
+.PP
+In the tradition of UN*X utilities, formail will do exactly what
+you ask it to, even if it results in a
+.RB non- RFC822
+compliant message.  In particular, formail will let you generate
+header fields whose name ends in a space instead of a colon.  While
+this is correct for the leading `@FROM@' line, that line is not a
+header field so much as the message separator for the mbox mailbox
+format.  Multiple occurrences of such a line or any other colonless
+header field will be considered by many mail programs, including
+formail itself, as the beginning of a new message.  Others will
+consider the message to be corrupt.  Because of this, you should
+not use the
+.B \-@FM_REN_INSERT@
+option with the `@FROM@' line as the resulting renamed line,
+`@OLD_PREFIX@@FROM@', will probably not do what you want it to.  If
+you want to save the original `@FROM@' line, rename it with the
+.B \-@FM_ReNAME@
+option to a legal header field such as `X-From_:'.
 .SH BUGS
 When formail has to generate a leading `@FROM@' line it normally will contain
 the current date.  If formail is given the option `\-@FM_ADD_IFNOT@ Date:',
@@ -394,7 +439,7 @@ it in this case, include \fB\-@FM_ADD_IFNOT@ '@FROM@'\fP.
 .PP
 If formail is not called as the first program in a pipe and it is told to
 split up the input in several messages, then formail will not terminate until
-the program it receives the input from terminates itself.
+the program it receives the input from closes its output or terminates itself.
 .PP
 If formail is instructed to generate an autoreply mail, it will
 .B never
@@ -418,6 +463,14 @@ If a
 field is found in a header, formail will copy the number of specified bytes in
 the body verbatim before resuming the regular scanning for message boundaries
 (except when splitting digests or Berkeley mailbox format is assumed).
+.PP
+Any header lines immediately following the leading `@FROM@' line
+that start with `@ESCAP@@FROM@' are considered to be a continuation
+of the `@FROM@' line.  If instructed to rename the `@FROM@' line,
+formail will change each leading `@ESCAP@' into a space, thereby
+transforming those lines into normal
+.B RFC822
+continuations.
 .SH NOTES
 Calling up formail with the \-@HELPOPT1@ or \-@HELPOPT2@ options will cause
 it to display a command-line help page.
