--- a/man/procmail.man
+++ b/man/procmail.man
@@ -1,6 +1,6 @@
 Please read the README file in this directory first.
 .ex
-.Id $Id: procmail.man,v 1.80 1999/11/04 23:26:14 guenther Exp $
+.Id $Id: procmail.man,v 1.80.2.2 2001/07/15 09:27:01 guenther Exp $
 .TH PROCMAIL 1 \*(Dt BuGless
 .na
 .SH NAME
@@ -59,7 +59,7 @@ mailbox.@ETCRC_desc@
 If running suid root or with root privileges, procmail will be able to
 perform as a functionally enhanced, backwards compatible mail delivery agent.
 .PP
-Procmail can also be used as a general purpose mail filter, i.e. provisions
+Procmail can also be used as a general purpose mail filter, i.e., provisions
 have been made to enable procmail to be invoked in a special sendmail rule.
 .PP
 The rcfile format is described in detail in the
@@ -107,7 +107,7 @@ configuration and exit.
 .B \-@PRESERVOPT@
 Preserve any old environment.  Normally procmail clears the environment
 upon startup@KEEPENV@.  However, in any case: any default values will override
-any preexisting environment variables, i.e. procmail will not pay any attention
+any preexisting environment variables, i.e., procmail will not pay any attention
 to any predefined environment variables, it will happily overwrite them
 with its own defaults.  For the list of environment variables that procmail
 will preset see the
@@ -117,7 +117,7 @@ list of preset environment variables shrinks to just: LOGNAME, HOME, SHELL,
 ORGMAIL and MAILDIR.
 .TP
 .B \-@TEMPFAILOPT@
-Make procmail fail softly, i.e. if procmail cannot deliver the mail to
+Make procmail fail softly, i.e., if procmail cannot deliver the mail to
 any of the destinations you gave, the mail will not bounce, but will return
 to the mailqueue.  Another delivery-attempt will be made at some time in
 the future.
@@ -154,7 +154,7 @@ This turns on explicit delivery mode, delivery will be to the local user
 This, of course, only is possible if procmail has root
 privileges@SETRUID@.
 Procmail will setuid to the intended recipients and delivers the mail as
-if it were invoked by the recipient with no arguments (i.e. if no rcfile
+if it were invoked by the recipient with no arguments (i.e., if no rcfile
 is found, delivery is like ordinary mail).  This option is incompatible with
 .BR \-@PRESERVOPT@ .
 .TP
@@ -220,13 +220,16 @@ R$*<@$*.procmail>$*
         $1<@$2>$3       Already filtered, map back
 .Ex
 And /etc/procmailrcs/some.rc could be as simple as:
-.Sx 6
+.Sx 9
+SENDER = "<$1>"                 # fix for empty sender addresses
+SHIFT = 1                       # remove it from $@
+
 :0                              # sink all junk mail
 * ^Subject:.*junk
 /dev/null
 
-:0                              # pass along all other mail
-! \-oi \-f "$@"
+:0 w                            # pass along all other mail
+! \-oi \-f "$SENDER" "$@"
 .Ex
 Do watch out when sending mail from within the /etc/procmailrcs/some.rc file,
 if you send mail to addresses which match the first rule again, you could
@@ -238,7 +241,7 @@ to set the recipient's LOGNAME, HOME and SHELL variable defaults
 .TP
 .B @MAILSPOOLDIR@$LOGNAME
 system mailbox; both the system mailbox and the immediate directory
-it is in will be created everytime procmail starts and either one is
+it is in will be created every time procmail starts and either one is
 not present@ETCRC_files@@ETCRCS_files@
 .TP
 .B @PROCMAILRC@
@@ -302,7 +305,7 @@ The maildir folder "x" is missing one or more required subdirectories and
 procmail could not create them.
 .TP
 Couldn't create or rename temp file "x"
-An error occured in the mechanics of  delivering to the directory folder "x".
+An error occurred in the mechanics of  delivering to the directory folder "x".
 .TP
 Couldn't determine implicit lockfile from "x"
 There were no `>>' redirectors to be found, using simply `$LOCKEXT' as
@@ -524,7 +527,7 @@ Non-zero exitcode (nnn) by "x"
 Program that was started by procmail as a condition or as the action of
 a recipe with the `@WAIT_EXIT_QUIET@' flag returned nnn instead of
 EXIT_SUCCESS (=@EX_OK@); the usage indicates that this is not an
-unexpected condition.
+entirely unexpected condition.
 .TP
 Notified comsat: "$LOGNAME@offset:file"
 Sent comsat/biff a notice that mail arrived for user $LOGNAME at `offset'
@@ -553,7 +556,7 @@ mailbox (unless of course, your mail shell uses the same lockfiles (local
 or global) you specified in your rcfile).
 .PP
 In the unlikely event that you absolutely need to kill procmail before it has
-finished, first try and use the regular kill command (i.e.
+finished, first try and use the regular kill command (i.e.,
 .I not
 kill \-9, see the subsection
 .I Signals
@@ -563,7 +566,7 @@ might not get removed.
 .PP
 Beware when using the
 .B \-@TEMPFAILOPT@
-option, if procmail repeatedly is unable to deliver the mail (e.g. due to
+option, if procmail repeatedly is unable to deliver the mail (e.g., due to
 an incorrect rcfile), the system mailqueue could fill up.  This could
 aggravate both the local postmaster and other users.@ETCRC_warn@@ETCRCS_warn@
 .PP
@@ -573,7 +576,7 @@ domain. It can be done if you manage to configure your MTA to add some
 headers with the envelope recipient data in order to tell Procmail who
 a message is for, but this is usually not the right thing to do.
 Perhaps you want to investigate if your MTA offers `virtual user
-tables', or see e.g. the `multidrop' facility of Fetchmail.
+tables', or check out the `multidrop' facility of Fetchmail.
 .SH BUGS
 After removing a lockfile by force, procmail waits $SUSPEND seconds before
 creating a new lockfile so that another process that decides to remove the
@@ -613,8 +616,9 @@ If the destination name used in explicit delivery mode is not in /etc/passwd,
 procmail will proceed as if explicit delivery mode was not in effect.
 If not in explicit delivery mode and
 should the uid procmail is running under, have no corresponding /etc/passwd
-entry, then HOME will default to @RootDir@, LOGNAME will default to #uid and
-SHELL will default to @BinSh@.
+entry, then HOME will default to @ROOT_DIR@, LOGNAME will default to #uid,
+SHELL will default to @BinSh@, and ORGMAIL will default to
+@DEAD_LETTER@.
 .PP
 When in explicit delivery mode, procmail will generate a leading `@FROM@'
 line if none is present.  If one is already present procmail will leave it
@@ -626,7 +630,7 @@ world writable, and the directory it is contained in is not world
 writable.  The @PROCMAILRC@ file has the additional constraint of not
 being group-writable or in a group-writable directory.@RESTRICT_EXEC@
 .PP
-If @MAILSPOOLDIR@$LOGNAME is a bogus mailbox (i.e. does not belong to the
+If @MAILSPOOLDIR@$LOGNAME is a bogus mailbox (i.e., does not belong to the
 recipient, is unwritable, is a symbolic link or is a hard link), procmail will
 upon startup try to rename it into a file starting
 with `@BOGUSprefix@$LOGNAME.' and
@@ -658,7 +662,7 @@ To make `egrepping' of headers more consistent, procmail concatenates all
 continued header fields; but only internally.  When delivering the mail, line
 breaks will appear as before.
 .PP
-If procmail is called under a name not starting with `procmail' (e.g. if it
+If procmail is called under a name not starting with `procmail' (e.g., if it
 is linked to another name and invoked as such), it comes up in explicit
 delivery mode, and expects the recipients' names as command line arguments
 (as if \-@DELIVEROPT@ had been specified).
@@ -682,7 +686,7 @@ Calling up procmail with the \-@HELPOPT1@ or \-@HELPOPT2@ options will cause
 it to display a command-line help and recipe flag quick-reference page.
 .PP
 There exists an excellent newbie FAQ about mailfilters (and procmail
-in particular), it is being maintained by Nancy McGough <nancym@ii.com>
+in particular); it is maintained by Nancy McGough <nancym@ii.com>
 and can be obtained by sending a mail to mail-server@rtfm.mit.edu with
 the following in the body:
 .RS
@@ -693,14 +697,10 @@ send usenet/news.answers/mail/filtering-faq
 In this case your $HOME/@DOT_FORWARD@ (beware, it
 .B has
 to be world readable) file should contain the line below.  Be sure to include
-the single and double quotes, and it
-.I must
-be an
+the single and double quotes, and unless you know your site to be running
+smrsh (the SendMail Restricted SHell), it must be an
 .I absolute
-path.  The \fB#\fP\fIYOUR_USERNAME\fP is not actually a parameter that is
-required by procmail, in fact, it will be discarded by sh before procmail ever
-sees it; it is however a necessary kludge against overoptimising sendmail
-programs:
+path.@FW_comment@
 .PP
 .na
 .nf
